<resources>
    <string name="app_name">HEPA4ALL</string>
    <string name="login_prompt">Login to get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="guest_login">Login as Guest</string>
    <string name="stakeholders_dir">Stakeholders Directory</string>
    <string name="individuals_dir">Individuals Directory</string>
    <string name="organizations_dir">Organizations Directory</string>
    <string name="hepa_course">HEPA4ALL Course</string>
    <string name="activities_dir">Activities Directory</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="exit_promt">Do you really wish to exit?</string>
    <string name="email_placeholder">jer_clarkson@bbc.co.uk</string>
    <string name="about_body">Description of the HEPA4ALL project</string>
    <string name="credits">
        This app makes use of the Android Material Icons Library licensed under the Apache Licence 2.0
    </string>
    <string name="app_version">Version</string>
    <string name="developed_by">Developed by</string>
    <string name="seit">SEIT Lab, Dept. of Computer Science</string>
    <string name="dev_email">cloizo07@ucy.ac.cy</string>
    <string name="ucy">University of Cyprus</string>
</resources>